--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "recharts": "^2.12.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
-    "@supabase/supabase-js": "^2.39.7"
+    "@supabase/supabase-js": "^2.39.7",
+    "@geoman-io/leaflet-geoman-free": "^2.18.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
