--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "sysarp-app",
   "private": true,
@@ -16,6 +17,8 @@
     "react-router-dom": "^6.22.3",
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
+    "leaflet-draw": "^1.0.4",
+    "react-leaflet-draw": "^0.21.0",
     "lucide-react": "^0.344.0",
     "recharts": "^2.12.2",
     "jspdf": "^2.5.1",
