--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,37 @@
+# Dependências
+node_modules/
+.pnp
+.pnp.js
+
+# Produção
+dist/
+dist-ssr/
+build/
+out/
+
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Variáveis de Ambiente
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Editor/System
+.vscode/
+.idea/
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Cache
+.eslintcache
+.stylelintcache
+.parcel-cache
+.cache/
+.next/
+.nuxt/
