feat: Enhance server configuration and mobile link setup
Introduces default port and Supabase URL/key fallbacks in the server configuration.
Updates the mobile link's build.gradle, Manifest, and layout to use a hardcoded DJI SDK key and provide a basic UI for server URL input.

--- a/mobile_link/AndroidManifest.xml
+++ b/mobile_link/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <!-- DJI SDK APP KEY - OBRIGATÓRIO -->
         <meta-data
             android:name="com.dji.sdk.API_KEY"
-            android:value="INSIRA_SUA_CHAVE_AQUI" />
+            android:value="ecbff499937275f3f14024e6" />
 
         <activity
             android:name=".MainActivity"
