--- a/mobile_link/build.gradle
+++ b/mobile_link/build.gradle
@@ -1,48 +1,16 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
-
-android {
-    namespace 'br.gov.pr.cbm.sysarp.link'
-    compileSdk 34
-
-    defaultConfig {
-        applicationId "br.gov.pr.cbm.sysarp.link"
-        minSdk 26
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
+// Top-level build file
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = '17'
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.2.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20'
     }
 }
 
-dependencies {
-    // DJI SDK V5 Enterprise (Matrice 30T, Mavic 3E)
-    implementation "com.dji:dji-sdk-v5-aircraft:5.10.0"
-    implementation "com.dji:dji-sdk-v5-network-datasource:5.10.0"
-    
-    // Networking
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
-    
-    // Android UI & Lifecycle
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.lifecycle:lifecycle-service:2.7.0'
+// Tarefa de limpeza padrão
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
